<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SignInPage">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signInWelcomeBackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/sign_in_color"
            android:textSize="26sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="54dp"
            android:layout_gravity="center"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/EditTextStyle"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/EditTextStyle"
                android:hint="@string/password"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextField"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                style="@style/EditTextStyle"
                android:hint="@string/name"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonStyle"
            android:id="@+id/signUpLogInButton"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_in_button"
            app:backgroundTint="#4E55D7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hintTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/account_existing"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/toggleLoginSignUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/log_in"
                android:onClick="toggleLogInMode"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/log_in_toggle_button"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/googleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="36dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/IconButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                app:icon="@drawable/google_icon" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/appleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="36dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/IconButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                app:icon="@drawable/apple_icon" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/sign_in_with_apple"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>